--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,8 @@ steps:
         $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
       - .
     id: Build
+    env:
+      - DOCKER_BUILDKIT=1
   - name: gcr.io/cloud-builders/docker
     args:
       - push
