--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,6 +28,7 @@ steps:
         --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID
       - '--region=$_DEPLOY_REGION'
       - '--quiet'
+      - '--service-account=$_RUN_SERVICE_ACCOUNT'
     id: Deploy
     entrypoint: gcloud
 images:
